<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".ActivityGame">

    <Space
        android:layout_width="match_parent"
        android:layout_height="43dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="112dp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/moves"
            android:textColor="#0A0A0A"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movCount"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:text="0000"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="107dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:text="00:00"
            android:textColor="#030303"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/n1"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A27A45"
                android:gravity="center"
                android:text="@string/_1"
                android:textColor="#000000"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n2"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A27A45"
                android:gravity="center"
                android:text="@string/_2"
                android:textColor="#070707"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n3"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A27A45"
                android:gravity="center"
                android:text="@string/_3"
                android:textColor="#050505"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n4"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A27A45"
                android:gravity="center"
                android:text="@string/_4"
                android:textColor="#020202"
                android:textSize="50sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/n5"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A27A45"
                android:gravity="center"
                android:text="@string/_5"
                android:textColor="#000000"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n6"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A27A45"
                android:gravity="center"
                android:text="@string/_6"
                android:textColor="#070707"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n7"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A27A45"
                android:gravity="center"
                android:text="@string/_7"
                android:textColor="#050505"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n8"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A27A45"
                android:gravity="center"
                android:text="@string/_8"
                android:textColor="#020202"
                android:textSize="50sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/n9"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A27A45"
                android:gravity="center"
                android:text="@string/_9"
                android:textColor="#000000"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n10"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A27A45"
                android:gravity="center"
                android:text="@string/_10"
                android:textColor="#070707"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n11"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A27A45"
                android:gravity="center"
                android:text="@string/_11"
                android:textColor="#050505"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n12"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A27A45"
                android:gravity="center"
                android:text="@string/_12"
                android:textColor="#020202"
                android:textSize="50sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/n13"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A27A45"
                android:gravity="center"
                android:text="@string/_13"
                android:textColor="#000000"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n14"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A27A45"
                android:gravity="center"
                android:text="@string/_14"
                android:textColor="#070707"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n15"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#A27A45"
                android:gravity="center"
                android:text="@string/_15"
                android:textColor="#050505"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/n0"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#020202"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="#020202"
                android:textSize="50sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="36dp" />

        <Button
            android:id="@+id/newG"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:background="#A27A45"
            android:text="@string/start_new_game" />

    </LinearLayout>


</LinearLayout>
