<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center|center_horizontal"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:gravity="center|center_horizontal"
        android:text="@string/welcome_to_game_of_fifteen"
        android:textColor="#282626"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="347dp"
        android:layout_height="369dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/b" />

    <Space
        android:layout_width="435dp"
        android:layout_height="51dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/music"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="106dp"
            android:layout_height="54dp"
            android:layout_weight="0" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start"

            android:textColor="#0056FF"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
